:mag: update meta tags

--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raphaël Ferreira</title>
-    <meta name="title" content="Raphaël Ferreira">
+    <meta name="title" content="Raphaël Ferreira - Web developer">
     <meta name="description" content="Bienvenue sur le portfolio d'un développeur front passioné et créatif qui adore explorer les solutions de demain.">
     <meta name="keywords" content="front-end developer web threejs webgl">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="French">
-    
+    <meta name="author" content="Raphaël Ferreira">
+
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Raphaël Ferreira">
+    <meta name="twitter:title" content="Raphaël Ferreira - Web developer">
     <meta name="twitter:description" content="Bienvenue sur le portfolio d'un développeur front passioné et créatif qui adore explorer les solutions de demain.">
     <meta name="twitter:image" content="/me.jpg">
 
-    <meta property="og:title" content="Raphaël Ferreira"/>
+    <meta property="og:title" content="Raphaël Ferreira - Web developer"/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="/me.jpg"/>
     <meta property="og:description" content="Bienvenue sur le portfolio d'un développeur front passioné et créatif qui adore explorer les solutions de demain."/>
